<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_header_register"
            android:textSize="32sp"
            android:textColor="?attr/colorPrimary"
            android:layout_marginBottom="32sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="32sp">
            <EditText
                android:id="@+id/register_email"
                android:autofillHints="emailAddress"
                android:hint="@string/auth_hint_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/register_confirm"
                android:autofillHints="emailAddress"
                android:hint="@string/auth_hint_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/register_password"
                android:autofillHints="password"
                android:hint="@string/auth_hint_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <Button
            android:id="@+id/button_register"
            android:text="@string/auth_button_register"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="32sp"
            android:layout_marginBottom="32sp"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_redirect_register"
                android:layout_marginEnd="16sp"/>
            <TextView
                android:id="@+id/button_toLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_redirectButton_register"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>