<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/hero"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="48dp">

    <ImageView
        android:id="@+id/hero_image"
        android:layout_width="196dp"
        android:layout_height="96dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        app:tint="?attr/colorPrimary" />

    <TextView
        android:id="@+id/hero_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/hero_desc"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/hero_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/hero_button"
        android:textColor="?attr/colorSecondary"
        android:textStyle="bold"/>
</LinearLayout>