<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_header_login"
            android:textSize="32sp"
            android:textColor="?attr/colorPrimary"
            android:layout_marginBottom="32sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="12sp">
            <EditText
                android:id="@+id/login_uname"
                android:autofillHints="unameAddress"
                android:hint="@string/auth_hint_uname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <EditText
                android:id="@+id/login_password"
                android:autofillHints="password"
                android:hint="@string/auth_hint_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_error"
            android:text=""
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="#dd0000"
            android:layout_marginBottom="12sp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login"
            android:text="@string/auth_button_login"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="32sp"
            android:layout_marginBottom="16sp"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimary"
            android:textColor="?attr/colorSecondary"
            app:rippleColor="?attr/colorSecondary"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_redirect_login"
                android:layout_marginEnd="16sp"/>
            <TextView
                android:id="@+id/button_toRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_redirectButton_login"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/loadingOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSecondaryVariant"
        android:visibility="gone"
        >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="1dp"
            android:indeterminateTint="?attr/colorPrimary"/>

    </FrameLayout>

</FrameLayout>